--- a/ISTI_CityNavigation/css/jquery-ui.css
+++ b/ISTI_CityNavigation/css/jquery-ui.css
@@ -910,7 +910,7 @@ body .ui-tooltip {
 }
 .ui-widget-header {
     border: 1px solid #dddddd;
-    background: #B8D3D3;
+    background: #F6E988;
     color: #333333;
     font-weight: bold;
 }
