--- a/ISTI_CityNavigation/css/style.css
+++ b/ISTI_CityNavigation/css/style.css
@@ -2,50 +2,134 @@
 /*  ===== 基本覆寫 ===== */
 *{font-family:Verdana,微軟正黑體, Microsoft JhengHei, Arial, Helvetica, sans-serif;}
 html,body{height:100%; margin:0; padding:0;}
-body{background: #f5f5f5;}
+body{background:url("../images/headerBg.jpg") no-repeat top center;}
 
 /*  ===== ochi框架 ===== */
-.WrapperHeader{background-color:#3faa8d; font-size:15px;
-    background-image: -webkit-linear-gradient(top, #3faa8d, #1d8e6f);
-    background-image: -moz-linear-gradient(top, #3faa8d, #1d8e6f);
-    background-image: -ms-linear-gradient(top, #3faa8d, #1d8e6f);
-    background-image: -o-linear-gradient(top, #3faa8d, #1d8e6f);
-    background-image: linear-gradient(to bottom, #3faa8d, #1d8e6f);
+.WrapperHeader{}
+.WrapperHeader .loginfo{padding-top:5px; text-align:right;}
+.WrapperHeader .logo{padding-top:0px; padding-bottom:30px;}
+.MainMenu{
+height:3em;background-color:#f8ae5e; font-size:14px; z-index: 99;
+background-image: -webkit-linear-gradient(top, #f8ae5e 0%, #f48e17 90%,#dadada 91%,#ffffff 100%);
+background-image: -moz-linear-gradient(top, #f8ae5e 0%, #f48e17 90%,#dadada 91%,#ffffff 100%);
+background-image: -ms-linear-gradient(top, #f8ae5e 0%, #f48e17 90%,#dadada 91%,#ffffff 100%);
+background-image: -o-linear-gradient(top, #f8ae5e 0%, #f48e17 90%,#dadada 91%,#ffffff 100%);
+background-image: linear-gradient(to bottom, #f8ae5e 0%, #f48e17 90%,#dadada 91%,#ffffff 100%);
 }
-.WrapperHeader .loginfo{ text-align:right;}
-/* height與line-height依LOGO高度做調整 */
-.WrapperHeader .headerbox{ min-height: 58px; line-height: 58px; padding: 0 20px 0 10px;}
-/* 選單切換按鈕 line-height要與 headerbox相同*/
-#mmenuMobswitch{float: left; background: rgba(11,104,79,0.9); line-height: 58px; padding-right: 10px; padding-left: 10px; color: #fff;}
-.MainMenu{min-height:40px;background-color:#cee4e1;line-height: 40px; }
-#mmenuMobswitch{display: inline-block; cursor: pointer;}
-.WrapperContent{}
-.WrapperContent .containerL{width:100%; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px;}
-.WrapperContent .containerS{width:100%; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px;}
-.WrapperFooter{background:#cee4e1;}
+.WrapperFooter{background:#e9e9e9;}
 .WrapperFooter .footerblock{text-align:center; font-size:13px; line-height:1.5em; padding:10px 0;}
+/* 側邊欄 */
+.sidebar-wrapper {
+  position: relative;
+  height: 100%;
+  overflow: auto;
+  background-color: #fff;
+}
+#toggle-sidebar{ padding:0 5px; cursor:pointer; font-size:36px;}
 
-
-/*  ===== 覆寫OchiRWD.css ===== */
-#HeaderOtherLink li{color:#9db9b7;}
-
+/* 回到頂部 */
+.WrapperBody .backTop{position:fixed; bottom:2%; right:-100px;opacity:0.7;}
+.WrapperBody .backTop a{color:#fff; padding:10px 20px 10px 20px;background:#000;-webkit-border-radius:10px 0 0 10px;-moz-border-radius:10px 0 0 10px;border-radius:10px 0 0 10px; height:20px; text-decoration:none; font-size:16px;}
 /*  ===== 系統使用第三方套件 ===== */
+/* 預載畫面 */
+#preloader {
+	position: fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	background-color:#fff; /* change if the mask should have another color then white */
+	z-index:999; /* makes sure it stays on top */
+}
+
+#status {
+	text-align:center;
+	position:absolute;
+	width:100%;
+	top:42%;/* 位置依使用圖示大小而微調 */
+}
+#loadingword{color:#999999;}
+
+/* loading icon */
+.sk-three-bounce {
+  margin: 10px auto;
+  width: 80px;
+  text-align: center; }
+  .sk-three-bounce .sk-child {
+    width: 20px;
+    height: 20px;
+    background-color: #333;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-three-bounce 1.4s ease-in-out 0s infinite both;
+            animation: sk-three-bounce 1.4s ease-in-out 0s infinite both; }
+  .sk-three-bounce .sk-bounce1 {
+    -webkit-animation-delay: -0.32s;
+            animation-delay: -0.32s; }
+  .sk-three-bounce .sk-bounce2 {
+    -webkit-animation-delay: -0.16s;
+            animation-delay: -0.16s; }
+
+@-webkit-keyframes sk-three-bounce {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+@keyframes sk-three-bounce {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+
+/* superfish menu */
+.superfishmenu ul a {
+	padding: 0.7em 1em;
+	text-decoration: none;
+    text-shadow: 1px 1px 1px #000000;
+	color: #fff;
+}
+.superfishmenu  ul  li:hover a,.superfishmenu  ul  li.sfHover a{
+	background: #d57107;
+}
+.superfishmenu  ul  li  ul  li{
+	background: #d57107;
+	border-bottom:1px solid #bc7120;
+}
+.superfishmenu  ul  li  ul  li:last-child{border-bottom:0;}
+
+.superfishmenu  ul  li  ul  li a:hover,
+.superfishmenu  ul  li  ul  li.sfHover a:hover,
+.superfishmenu ul li ul li ul li,
+.superfishmenu ul li ul li.sfHover ul li a{
+	background: #e88e2d;
+}
+.superfishmenu ul li ul li.sfHover ul li a:hover{
+	background: #e88e2d;
+}
+.superfishmenu > ul li.activemenu{background: #e88e2d;}
+
 /* easytab style */
-.easytabH ul.menubar{ margin:0;  padding: 0; }
-.easytabH .menubar li { display: inline-block; zoom:1; *display:inline; background: #e9e9e9; border: solid 1px #dbdbdb; border-bottom: none; -moz-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; border-radius:10px 10px 0 0; border:0;}
-.easytabH .menubar li a { font-size: 14px; line-height: 2em; display: block; padding: 2px 15px; outline: none; text-decoration:none;}
-.easytabH .menubar li a:hover { background-color:#d1e4e9;-moz-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; border-radius:10px 10px 0 0; text-decoration:none;}
-.easytabH .menubar li.active {border: solid #ccc 1px; border-bottom:0; background: #fff; padding-top: 6px; position: relative; top: 1px; border-radius:10px 10px 0 0; }
-.easytabH .menubar li a.active { font-weight:bold; color:#000; }
-.easytabH .menubar li a.active:hover{ background-color:transparent; text-decoration:none; cursor:default;}
-.easytabH .panel-container{ background: #fff; border: solid #dbdbdb 1px; padding: 10px; -moz-border-radius: 0 5px 5px 5px; -webkit-border-radius: 0 5px 5px 5px; border-radius: 0 5px 5px 5px;}
-/* easytab垂直tabs */
-.easytabV ul.menubar {list-style: none; margin: 0; padding: 0;float:left; border-right:1px solid #dbdbdb;}
-.easytabV .menubar li { width:auto; display: block; margin: 0; padding: 0; text-align:left; }
-.easytabV .menubar li a { display: block; padding: 5px 3px;  outline: none; background:#e9e9e9; margin-bottom:5px;}
-.easytabV .menubar li a:hover { text-decoration:none;-moz-border-radius:0; -webkit-border-radius:0; border-radius:0; }
-.easytabV .menubar li.selected-tab a{position: relative; left: 1px; background:#fff; border:1px solid #dbdbdb; border-right:0; border-left:0; color:#000;}
-.easytabV .panel-container{}
+    .easytabH ul.menubar{ margin:0;  padding: 0; }
+    .easytabH .menubar li { display: inline-block; zoom:1; *display:inline; background: #e9e9e9; border: solid 1px #dbdbdb; border-bottom: none; -moz-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; border-radius:10px 10px 0 0; border:0;}
+    .easytabH .menubar li a { font-size: 14px; line-height: 2em; display: block; padding: 2px 15px; outline: none; text-decoration:none;}
+    .easytabH .menubar li a:hover { background-color:#d1e4e9;-moz-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; border-radius:10px 10px 0 0; text-decoration:none;}
+    .easytabH .menubar li.active {border: solid #ccc 1px; border-bottom:0; background: #fff; padding-top: 6px; position: relative; top: 1px; border-radius:10px 10px 0 0; }
+    .easytabH .menubar li a.active { font-weight:bold; color:#000; }
+	.easytabH .menubar li a.active:hover{ background-color:transparent; text-decoration:none; cursor:default;}
+    .easytabH .panel-container{ background: #fff; border: solid #dbdbdb 1px; padding: 10px; -moz-border-radius: 0 5px 5px 5px; -webkit-border-radius: 0 5px 5px 5px; border-radius: 0 5px 5px 5px;}
+    /* easytab垂直tabs */
+	.easytabV ul.menubar {list-style: none; margin: 0; padding: 0;float:left; border-right:1px solid #dbdbdb;}
+	.easytabV .menubar li { width:auto; display: block; margin: 0; padding: 0; text-align:left; }
+	.easytabV .menubar li a { display: block; padding: 5px 3px;  outline: none; background:#e9e9e9; margin-bottom:5px;}
+	.easytabV .menubar li a:hover { text-decoration:none;-moz-border-radius:0; -webkit-border-radius:0; border-radius:0; }
+	.easytabV .menubar li.selected-tab a{position: relative; left: 1px; background:#fff; border:1px solid #dbdbdb; border-right:0; border-left:0; color:#000;}
+	.easytabV .panel-container{}
 	
 /* Magnific Popup */
 .magpopup{
@@ -114,53 +198,10 @@ background-image: linear-gradient(to bottom, #f1f1f1 0%, #ededed 60%, #dedede 10
 }
 /* 小於768px以下的螢幕 */
 @media (max-width: 767px) {
-    .no-gutter > [class*='col-'] {
-        padding-right:0px;
-        padding-left:0px;
-    }
-
-}
-/* 介於991~768px的螢幕 */
-@media (min-width: 768px) {
-    .no-gutter > [class*='col-'] {
-        padding-right:0px;
-        padding-left:0px;
-    }
-    .container {
-        width:100%;
-    }
-
-}
-/* 介於1199~992px的螢幕 */
-@media (min-width: 970px) {
-    .no-gutter > [class*='col-'] {
-        padding-right:0px;
-        padding-left:0px;
-    }
-    .container {
-        width: 970px;
-    }
-
-}
-
-/* 修正datepicker年月寬度 */
-.xdsoft_datetimepicker .xdsoft_month {
-	width: 80px;
-}
-.xdsoft_datetimepicker .xdsoft_year{
-	width: 68px;
-}
-
-/* mmenu style */
-.mm-menu {
-    background: #b8d3d3;
-}
-
-/*  ===== RWD處理 ===== */
-/* 小於768px以下的螢幕 */
-@media (max-width: 767px) {
-    #DeskSidebarMmenu{display: none;}
-    .WrapperContent{padding-left: 0px;}
+	.no-gutter > [class*='col-'] {
+    padding-right:0px;
+    padding-left:0px;
+	}
     .deskOnly{display: none;}
     .mobileOnly{display: inherit;}
     .btnmobile{width: 100%; display: block;}
@@ -170,34 +211,58 @@ background-image: linear-gradient(to bottom, #f1f1f1 0%, #ededed 60%, #dedede 10
 }
 /* 介於991~768px的螢幕 */
 @media (min-width: 768px) {
-    #DeskSidebarMmenu{display: none;}
-    .WrapperContent{padding-left: 0px;}
+	.no-gutter > [class*='col-'] {
+    padding-right:0px;
+    padding-left:0px;
+	}
+	.container {
+    width:100%;
+  	}
     .deskOnly{display: none;}
     .mobileOnly{display: inherit;}
     .btnmobile{width:inherit; display: inline-block;}
     a.btnmobile{margin-bottom:inherit;}
     .DSBtitle{text-align: center;}
     .FontAwPa{padding-left: 0px;}
-
-
+	
 }
-/* 介於1199~1020px的螢幕 */
-    @media (min-width: 1020px) {
-        #DeskSidebarMmenu{display: none;}
-        .WrapperContent{padding-left: 0px;}
-        .deskOnly{display: inline-block;}
-        .mobileOnly{display: none;}
-        .DSBtitle{text-align: left;}
-        .FontAwPa{padding-left: 5px;}
-}
-/* 大於1200px的螢幕  */
-@media (min-width: 1200px) {
-    #DeskSidebarMmenu{display: block;}
-    .WrapperContent{padding-left: 250px;}
+/* 介於1199~992px的螢幕 */
+@media (min-width: 992px) { 
+	.no-gutter > [class*='col-'] {
+    padding-right:0px;
+    padding-left:0px;
+	}
+	.container {
+        max-width: 970px;
+  	}
     .deskOnly{display: inline-block;}
     .mobileOnly{display: none;}
     .DSBtitle{text-align: left;}
     .FontAwPa{padding-left: 5px;}
+	
+}
+/* 大於1200px的螢幕 內容最大到970px,故需覆寫bootstrap container原始設定 */
+@media (min-width: 1200px) {
+    .no-gutter > [class*='col-'] {
+    padding-right:0px;
+    padding-left:0px;
+	}
+	.container {
+    max-width: 970px;
+  	}
+    .deskOnly{display: inline-block;}
+    .mobileOnly{display: none;}
+    .DSBtitle{text-align: left;}
+    .FontAwPa{padding-left: 5px;}
+	
+}
+
+/* 修正datepicker年月寬度 */
+.xdsoft_datetimepicker .xdsoft_month {
+	width: 80px;
+}
+.xdsoft_datetimepicker .xdsoft_year{
+	width: 68px;
 }
 
 /*  ===== 本系統專用 ===== */
@@ -219,6 +284,7 @@ background-image: linear-gradient(to bottom, #f1f1f1 0%, #ededed 60%, #dedede 10
 .BoxRadiusA{border-radius:10px;}
 .BoxRadiusB{border-radius:5px;}
 .BoxRadiusF{border-radius:30px;}
+
 .BoxShadowA{box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05), 0 2px 10px 0 rgba(0, 0, 0, 0.05);}
 .iconA{color: #ba0c0c;}
 .iconB{color: #ff9600;}
@@ -237,6 +303,8 @@ a.searchbtn{ color:#1a9d4e;}
 .font-black{color:#181818;}
 .font-black a{color:#000000;text-decoration: none;border-bottom: 1px solid transparent;transition: all ease-in-out 0.2s;}
 .font-black a:hover{color:#00b0c5;border-color:#00b0c5;}
+.blockdisplay{display: block;}
+
 
 /* 頁籤式按鈕V2 layout */
 .tabmenublockV2wrapper{overflow-x: auto; overflow-y: hidden; padding-top: 6px;}
@@ -248,7 +316,7 @@ a.searchbtn{ color:#1a9d4e;}
 .tabmenublockV2{border-bottom:1px solid #d3d3d3;}
 .SlimTabBtnV2 a{color:#177b7f; text-decoration:none; transition: all ease-in-out 0.2s;}
 .SlimTabBtnV2 a:hover{color:#0ed6de;}
-.SlimTabBtnV2Current a{background:#f5f5f5; border:1px solid #d3d3d3; border-top:2px solid #109fa5;  border-bottom:0; font-weight:bold; color: #000;}
+.SlimTabBtnV2Current a{background:#ffffff; border:1px solid #d3d3d3; border-top:2px solid #109fa5;  border-bottom:0; font-weight:bold; color: #000;}
 .SlimTabBtnV2Current a:hover{color:#000; cursor:default;}
 
 /* taiwan */
@@ -256,3 +324,83 @@ a.searchbtn{ color:#1a9d4e;}
 #taiwanmap .areabox:hover{fill:#1a9d4e;  cursor:pointer;}
 #taiwanmap .areaboxactive{fill:#067432;}
 #taiwanmap .areaboxactive:hover{fill:#067432; cursor:default;}
+
+/* 開啟台灣地圖 */
+a.twbtn{
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    border-radius: 0 30px 30px 0;
+    padding: 10px 15px 10px 5px;
+    font-size: 16px;
+    color: #000;
+    display: inline;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.54) inset, 0 -2px 1px rgba(0, 0, 0, 0.31) inset;
+    background: #ffbf00;
+    background: -moz-linear-gradient(top,  #ffbf00 0%, #ff9700 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffbf00), color-stop(100%,#ff9700));
+    background: -webkit-linear-gradient(top,  #ffbf00 0%,#ff9700 100%);
+    background: -o-linear-gradient(top,  #ffbf00 0%,#ff9700 100%);
+    background: -ms-linear-gradient(top,  #ffbf00 0%,#ff9700 100%);
+    background: linear-gradient(to bottom,  #ffbf00 0%,#ff9700 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffbf00', endColorstr='#ff9700',GradientType=0 );
+    transition: all ease-in-out 0.2s;
+}
+
+
+a.twbtn:hover {
+    background: #ffdc00;
+    text-decoration: none;
+    background: -moz-linear-gradient(top,  #ffdc00 0%, #ffa700 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffdc00), color-stop(100%,#ffa700));
+    background: -webkit-linear-gradient(top,  #ffdc00 0%,#ffa700 100%);
+    background: -o-linear-gradient(top,  #ffdc00 0%,#ffa700 100%);
+    background: -ms-linear-gradient(top,  #ffdc00 0%,#ffa700 100%);
+    background: linear-gradient(to bottom,  #ffdc00 0%,#ffa700 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffdc00', endColorstr='#ffa700',GradientType=0 );
+}
+@media (max-width: 767px) {
+    a.twbtn{
+        width: 100%;
+        text-align: center;
+        border-radius:0 0 0 0;
+        bottom:0;
+    }
+    .WrapperFooter .footerblock{padding-bottom: 50px;}
+}
+
+a.genbtnfull,input.genbtnfull,button.genbtnfull{
+    border:1px solid #7ad0d3; padding:5px 15px;*padding:5px;_padding:5px;color:#014e51; font-size:15px; font-weight:bold;
+    background-color:#e3feff;text-shadow: 1px 1px 1px #fff;
+    background-image: -webkit-linear-gradient(top, #e3feff, #a5edf0);
+    background-image: -moz-linear-gradient(top, #e3feff, #a5edf0);
+    background-image: -ms-linear-gradient(top, #e3feff, #a5edf0);
+    background-image: -o-linear-gradient(top, #e3feff, #a5edf0);
+    background-image: linear-gradient(to bottom, #e3feff, #a5edf0);
+    transition: all ease-in-out 0.2s;
+    display: block; width: 100%; text-align: center;
+}
+a.genbtnfull:hover,input.genbtnfull:hover,button.genbtnfull:hover{
+    cursor:pointer;color:#fff;border:1px solid #014a4d;text-decoration:none;
+    background-color:#179ca2;text-shadow: 1px 1px 1px #000;
+    background-image: -webkit-linear-gradient(top, #179ca2, #04696e);
+    background-image: -moz-linear-gradient(top, #179ca2, #04696e);
+    background-image: -ms-linear-gradient(top, #179ca2, #04696e);
+    background-image: -o-linear-gradient(top, #179ca2, #04696e);
+    background-image: linear-gradient(to bottom, #179ca2, #04696e);
+}
+
+/* svg 外框 */
+.obj-wrapperT1 {
+    position:relative;
+    width:100%;
+    padding-bottom:100%;
+    height:0;
+    overflow:hidden;
+}
+.SVGcontent {
+    position:absolute;
+    width:100%;
+    height:100%;
+}
