1.新增 BudgetExecution 資料表 年份欄位 2.新增 BudgetExecution 前台程式 3.master page 調整

--- a/ISTI_CityNavigation/Manage/BackEnd.Master
+++ b/ISTI_CityNavigation/Manage/BackEnd.Master
@@ -131,7 +131,7 @@
                             <!-- 桌機主選單 -->
                             <div class="superfishmenu">
                                 <ul>
-                                    <li><a href="javascript:void(0);">退出管理</a></li>
+                                    <li><a href="<%=ResolveUrl("~/WebPage/FundingExecution.aspx") %>">退出管理</a></li>
                                     <li><a href="<%=ResolveUrl("~/Manage/MemberMag.aspx") %>">會員管理</a></li>
                                     <li><a href="<%=ResolveUrl("~/Manage/IDB_Import.aspx") %>">IDB 資料管理</a></li>
                                     <li><a href="<%=ResolveUrl("~/Manage/ISTI_Import.aspx") %>">ISTI 資料管理</a></li>
@@ -154,8 +154,7 @@
 
             <div class="WrapperFooter">
                 <div class="footerblock container font-normal">
-                    版權所有©2019｜ 建議瀏覽解析度1024x768以上<br />
-                    業務窗口：黃金貝(分機：00000)｜意見反應｜系統使用說明書
+                    版權所有©2019｜ 建議瀏覽解析度1024x768以上
                 </div><!--{* footerblock *}-->
             </div><!-- WrapperFooter -->
 
