--- a/ISTI_CityNavigation/css/style.css
+++ b/ISTI_CityNavigation/css/style.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /*  ===== 基本覆寫 ===== */
 *{font-family:Verdana,微軟正黑體, Microsoft JhengHei, Arial, Helvetica, sans-serif;}
 html,body{height:100%; margin:0; padding:0;}
