更新項目 1.新增 codetable 會員權限  IDB長官 2.新增IDB長官權限管控 3.新增會員LOG紀錄 4.加入後臺管理麵包屑

--- a/ISTI_CityNavigation/Manage/BackEnd.Master
+++ b/ISTI_CityNavigation/Manage/BackEnd.Master
@@ -147,6 +147,7 @@
                                     <li class="sa" style="display:none;"><a href="<%=ResolveUrl("~/Manage/MemberMag.aspx") %>">會員管理</a></li>
                                     <li class="sa idb" style="display:none;"><a href="<%=ResolveUrl("~/Manage/IDB_Import.aspx") %>">IDB 資料管理</a></li>
                                     <li class="sa isti" style="display:none;"><a href="<%=ResolveUrl("~/Manage/ISTI_Import.aspx") %>">ISTI 資料管理</a></li>
+                                    <li class="sa" style="display:none;"><a href="<%=ResolveUrl("~/Manage/MemberLog.aspx") %>">會員修改紀錄</a></li>
                                 </ul>
                             </div><!-- superfishmenu -->
 
