--- a/ISTI_CityNavigation/MasterPage.Master
+++ b/ISTI_CityNavigation/MasterPage.Master
@@ -574,8 +574,7 @@
 
             <div class="WrapperFooter">
                 <div class="footerblock container font-normal">
-                    版權所有©2019 智慧城鄉計畫辦公室｜ 建議瀏覽解析度1024x768以上<br />
-                    業務窗口：黃金貝(分機：00000)｜意見反應｜系統使用說明書
+                    版權所有©2019 智慧城鄉計畫辦公室｜ 建議瀏覽解析度1024x768以上
                 </div><!--{* footerblock *}-->
             </div><!-- WrapperFooter -->
 
