--- a/ISTI_CityNavigation/Manage/BackEnd.Master
+++ b/ISTI_CityNavigation/Manage/BackEnd.Master
@@ -147,7 +147,13 @@
                                     <li class="sa" style="display:none;"><a href="<%=ResolveUrl("~/Manage/MemberMag.aspx") %>">會員管理</a></li>
                                     <li class="sa idb" style="display:none;"><a href="<%=ResolveUrl("~/Manage/IDB_Import.aspx") %>">IDB 資料管理</a></li>
                                     <li class="sa isti" style="display:none;"><a href="<%=ResolveUrl("~/Manage/ISTI_Import.aspx") %>">ISTI 資料管理</a></li>
-                                    <li class="sa" style="display:none;"><a href="<%=ResolveUrl("~/Manage/MemberLog.aspx") %>">會員修改紀錄</a></li>
+                                    <li class="sa" style="display:none;"><a href="javascript:void(0);">系統修改紀錄</a>
+                                        <ul>
+                                            <li><a href="<%=ResolveUrl("~/Manage/MemberLog.aspx") %>">會員修改紀錄</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Manage/MemberLog.aspx") %>">ISTI 資料上傳紀錄</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Manage/MemberLog.aspx") %>">IDB 資料上傳紀錄</a></li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div><!-- superfishmenu -->
 
