--- a/ISTI_CityNavigation/MasterPage.Master
+++ b/ISTI_CityNavigation/MasterPage.Master
@@ -192,15 +192,15 @@
                                     <li><a href="Population_All.aspx">全國資料</a>
                                         <ul>
                                             <li><a href="<%=ResolveUrl("~/Webpage/Population_All.aspx") %>">人口土地</a></li>
-                                            <li><a href="javascript:void(0);">產業</a></li>
-                                            <li><a href="javascript:void(0);">農業</a></li>
-                                            <li><a href="javascript:void(0);">觀光</a></li>
-                                            <li><a href="javascript:void(0);">健康</a></li>
-                                            <li><a href="javascript:void(0);">零售</a></li>
-                                            <li><a href="javascript:void(0);">教育</a></li>
-                                            <li><a href="javascript:void(0);">交通</a></li>
-                                            <li><a href="javascript:void(0);">能源</a></li>
-                                            <li><a href="javascript:void(0);">智慧安全、治理</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Industry_All.aspx") %>">產業</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Farming_All.aspx") %>">農業</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Travel_All.aspx") %>">觀光</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Health_All.aspx") %>">健康</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Retail_All.aspx") %>">零售</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Education_All.aspx") %>">教育</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Traffic_All.aspx") %>">交通</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Energy_Alll.aspx") %>">能源</a></li>
+                                            <li><a href="<%=ResolveUrl("~/Webpage/Safety_All.aspx") %>">智慧安全、治理</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">北部縣市</a>
