--- a/ISTI_CityNavigation/css/style.css
+++ b/ISTI_CityNavigation/css/style.css
@@ -404,3 +404,28 @@ a.genbtnfull:hover,input.genbtnfull:hover,button.genbtnfull:hover{
     width:100%;
     height:100%;
 }
+
+a#searchbtn {
+    position: absolute;
+    right: 10px;
+    top: 52px;
+    border-radius: 10px 10px 0 0;
+    padding: 10px;
+    font-size: 16px;
+    color: #a65805;
+    display: inline;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+    background: #f8ae5e;
+    background: -moz-linear-gradient(top, #ffc587 0%, #f8ae5e 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffc587), color-stop(100%,#f8ae5e));
+    background: -webkit-linear-gradient(top, #ffc587 0%,#f8ae5e 100%);
+    background: -o-linear-gradient(top, #ffc587 0%,#f8ae5e 100%);
+    background: -ms-linear-gradient(top, #ffc587 0%,#f8ae5e 100%);
+    background: linear-gradient(to bottom, #ffc587 0%,#f8ae5e 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc587', endColorstr='#f8ae5e',GradientType=0 );
+    transition: all ease-in-out 0.2s;
+}
+
+a#searchbtn:hover {
+    color: #000;
+}
